Updated adhoc section with descriptions

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -1218,24 +1218,21 @@ NHS.UK prototype kit
 
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Check your personal details</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/check-personal-details-checkbox">Checkbox
-                                    to confirm
-                                    they're correct
-                                    failed</a></td>
+                            <td class="nhsuk-table__cell">
+                                Check your personal details
+                                <br><br>
+                                <p class="nhsuk-hint">This version is the same as the existing screen except this version uses an inset text component with the hyposthesis being this will draw more attention to some of the information on screen.</p>
+                            </td>
+
+                            <td class="nhsuk-table__cell"><a href="v5-enquiry/experimental/check-personal-details">Check your personal details</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Full or Partial Payment</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn/payment-choice">Radio to select full or
-                                    partial
-                                    failed</a></td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
-                        </tr>
-
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Session timeout warning modal</td>
+                            <td class="nhsuk-table__cell">Session timeout warning modal
+                                <br><br>
+                                <p class="nhsuk-hint">An example of session timeout modal using the HMRC / Gov UK toolkit example as a base and re-styled using NHS brand colours and components.</p>
+                            </td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn/session-timeout-warning-modal">Timeout warning modal</a>
                             </td>
@@ -1243,7 +1240,10 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Session timeout redirect modal</td>
+                            <td class="nhsuk-table__cell">Session timeout redirect modal
+                                <br><br>
+                                <p class="nhsuk-hint">An example of session timeout modal using the HMRC / Gov UK toolkit example as a base and re-styled using NHS brand colours and components.</p>
+                            </td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn/session-timeout-redirect-modal">Timeout redirect modal</a>
                             </td>
@@ -1251,7 +1251,10 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Session timed out page</td>
+                            <td class="nhsuk-table__cell">Session timed out page
+                                <br><br>
+                                <p class="nhsuk-hint">An example of a session timeout page the HMRC / Gov UK toolkit example as a base and re-styled using NHS brand colours and components.</p>
+                            </td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn/session-timeout">Session timed out page</a>
                             </td>
@@ -1283,7 +1286,10 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Direct Debit check your answers (go back link)</td>
+                            <td class="nhsuk-table__cell">Direct Debit check your answers
+                                <br><br>
+                                <p class="nhsuk-hint">The current version only allows users to go back via 'change' links or start again via 'cancel', this proposed version includes a 'go back' link to test if users would find this useful.</p>
+                            </td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn/experimental/dd-check-answers-go-back-link">Direct Debit check your
                                     answers (go back link)</a>
@@ -1296,7 +1302,10 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Unable to set up Direct Debit (redirect to payment method)
+                            <td class="nhsuk-table__cell">Unable to set up Direct Debit
+                                <br><br>
+                                <p class="nhsuk-hint">The current version loops the user back to the 'pay by Direct Debit' screen on clicking 'Continue', this version proposes instead to redirect the user to be able to select which payment method they would like to use with the hypothesis being if they are redirected to the start of pay by Direct Debit journey again they might feel like they can't pay when in reality they could pay by card as an alternative option.</p>
+                            
                             </td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn/experimental/unable-to-set-up-dd-redirect">Unable to set up Direct Debit
@@ -1310,7 +1319,10 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Apple Pay (Full payment)</td>
+                            <td class="nhsuk-table__cell">Apple Pay (Full payment)
+                                <br><br>
+                                <p class="nhsuk-hint">An example of how the Gov pay screens would look if we are able to offer Apple Pay as a payment option.</p>
+                            </td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/experimental/gov-pay-apple-pay">Apple Pay (Full
                                     payment)</a>
                             </td>
@@ -1322,7 +1334,11 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Google Pay (Full payment)</td>
+                            <td class="nhsuk-table__cell">Google Pay (Full payment)
+                                <br><br>
+                                <p class="nhsuk-hint">An example of how the Gov pay screens would look if we are able to offer Google Pay as a payment option.</p>
+                            
+                            </td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/experimental/gov-pay-google-pay">Google Pay (Full
                                     payment)</a>
                             </td>
