--- a/app/views/v5-enquiry/check-personal-details.html
+++ b/app/views/v5-enquiry/check-personal-details.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-Chcek your personal details
+Check your personal details
 {% endblock %}
 
 {% block outerContent %}
