Postcode lookup experimental page added to adhoc

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -1349,6 +1349,20 @@ NHS.UK prototype kit
                             </td>
                         </tr>
 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">What is your address? (Postcode look up)
+                                <br><br>
+                                <p class="nhsuk-hint">There are various screens throughout the journeys which ask a user to fill out their address, the hypothesis is by implementing an address look up via postcode, we could reduce time to complete by eliminating the need to type out an address, and also reduce input errors. We would also like to maintain the option to add an address manually for hard to find / obscure addresses.</p>
+                            </td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/experimental/what-is-your-address-postcode">What is your address? (Postcode look up)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag">
+                                    BOTH
+                                </strong>
+                            </td>
+                        </tr>
+
                     </tbody>
                 </table>
             </div>
