--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+  TECS - Respond to your letter
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
