Added address select from lookup in experimental

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -1363,6 +1363,19 @@ NHS.UK prototype kit
                             </td>
                         </tr>
 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">
+                                What is your address? (Select from look up results)
+                            </td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/experimental/what-is-your-address-select">What is your address? (Select from look up results)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag">
+                                    BOTH
+                                </strong>
+                            </td>
+                        </tr>
+
                     </tbody>
                 </table>
             </div>
