--- a/app/views/v6-pcn/experimental/what-is-your-address-postcode.html
+++ b/app/views/v6-pcn/experimental/what-is-your-address-postcode.html
@@ -32,7 +32,7 @@ What is your address?
                 <label class="nhsuk-label" for="postcode">
                     Postcode
                 </label>
-                <input class="nhsuk-input nhsuk-input--width-10" id="postcode" name="searchPostcode" type="text">
+                <input class="nhsuk-input nhsuk-input--width-10" id="postcode" name="postcode-search" type="text">
             </div>
 
             <p><a href="#">Enter address manually</a></p>
