Adjusted spacing on experimental screen

--- a/app/views/v6-pcn/experimental/what-is-your-address-select.html
+++ b/app/views/v6-pcn/experimental/what-is-your-address-select.html
@@ -26,7 +26,7 @@ What is your address?
 
         <p>This address will be updated on your record.</p>
 
-        <p><strong>Postcode</strong></p>
+        <p class="nhsuk-u-margin-bottom-2"><strong>Postcode</strong></p>
         <p>{{ data['postcode-search'] | default('NE1 3JA') | upper }} <a href="/v6-pcn/experimental/what-is-your-address-postcode" class="nhsuk-link--no-visited-state nhsuk-u-margin-left-2">Change</a></p>
         
         <form action="/v6-pcn/experimental/what-is-your-address-select" method="post" class="form">
