Various fixes / manual payment dd / apple pay fixes

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -293,7 +293,7 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell">You have a Hc3 certificate for limited help</td>
                             <td class="nhsuk-table__cell"><a
                                     href="v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help">You
-                                    have hc3 cert for limited help</a></td>
+                                    have HC3 cert for limited help</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                     DECS
                                 </strong></td>
@@ -456,11 +456,21 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Cannot set up direct debit</td>
+                            <td class="nhsuk-table__cell">Cannot set up Direct Debit</td>
                             <td class="nhsuk-table__cell"><a
                                     href="v6-pcn/error-messages/cannot-set-up-direct-debit">Direct debit
                                     error
                                     failed</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Cannot set up Direct Debit (3rd KYC Failure - manual payment)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/error-messages/cannot-set-up-dd-manual-payment">
+                                    Cannot set up Direct Debit (3rd KYC Failure - manual payment)
+                                </a>
+                            </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
@@ -742,7 +752,7 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a higher contribution amount
                             </td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-high-pcn">We found a
-                                    hc3 cert higher</a>
+                                    HC3 cert higher</a>
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                     DECS
@@ -752,7 +762,7 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount
                             </td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-pcn">We found a
-                                    hc3 cert lower</a>
+                                    HC3 cert lower</a>
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag nhsuk-tag--green">
@@ -764,7 +774,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with same contribution amount</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-pcn">We found a
-                                    hc3 cert same</a>
+                                    HC3 cert same</a>
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag nhsuk-tag--green">
