--- a/app/views/v4/what-you-want-to-do-next.html
+++ b/app/views/v4/what-you-want-to-do-next.html
@@ -45,7 +45,7 @@ What do you want to do next?
               </label>
           </div>
           <!-- <div class="nhsuk-hint" id="example-with-hint-text-hint">
-            If you've received a PCN you can pay by credit or debit card, or by direct debit.
+            If you've received a PCN you can pay by credit or debit card, or by Direct Debit.
           </div> -->
           <div class="nhsuk-radios__item">
             <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="entitlement">
