--- a/app/views/v5/unable-to-set-up-direct-debit.html
+++ b/app/views/v5/unable-to-set-up-direct-debit.html
@@ -28,7 +28,7 @@ You are unable to set up a Direct Debit
         <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
         <h1 class="nhsuk-heading-xl">You are unable to set up a Direct Debit</h1>
        
-        <p>To set up a direct debit online, you must confirm that you are:</p>
+        <p>To set up a Direct Debit online, you must confirm that you are:</p>
         <ul>
           <li>using your own bank account</li>
           <li>the only person required to authorise debits on this account</li>
