--- a/app/views/v6-pcn/experimental/gov-pay-apple-pay.html
+++ b/app/views/v6-pcn/experimental/gov-pay-apple-pay.html
@@ -621,7 +621,7 @@ GOV.UK prototype kit
 		</div>
 
 		<div class="apple-pay-modal-bottom">
-			<a href="full-payment-made">
+			<a href="../full-payment-made">
 				<img src="/images/apple-touch-icon.png" alt="apple touch icon">
 			</a>
 			<p>Pay with Touch ID</p>
