--- a/app/views/v6-pcn/experimental/gov-pay-google-pay.html
+++ b/app/views/v6-pcn/experimental/gov-pay-google-pay.html
@@ -634,7 +634,7 @@ GOV.UK prototype kit
 					<p class="google-pay-modal-cost">£50.00</p>
 				</div>
 				<div>
-					<a href="full-payment-made" class="google-pay-modal-btn">
+					<a href="../full-payment-made" class="google-pay-modal-btn">
 						Pay
 					</a>
 				</div>
