--- a/app/views/user-research-journies/pcn-research-1/what-you-need-to-do-next-bsa.html
+++ b/app/views/user-research-journies/pcn-research-1/what-you-need-to-do-next-bsa.html
@@ -49,7 +49,7 @@ What do you want to do next?
             </label>
           </div>
           <!-- <div class="nhsuk-hint" id="example-with-hint-text-hint">
-            If you've received a PCN you can pay by credit or debit card, or by direct debit.
+            If you've received a PCN you can pay by credit or debit card, or by Direct Debit.
           </div> -->
 
           <div class="nhsuk-radios__divider">or</div>
