--- a/app/views/v5-enquiry/what-you-need-to-do-next.html
+++ b/app/views/v5-enquiry/what-you-need-to-do-next.html
@@ -62,7 +62,7 @@
               </label>
           </div>
           <div class="nhsuk-hint" id="example-with-hint-text-hint">
-            If you've received a PCN you can pay by credit or debit card, or by direct debit.
+            If you've received a PCN you can pay by credit or debit card, or by Direct Debit.
           </div>
          
          </div>
