Option 1 pages for PCN and surcharge manual payment

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -465,10 +465,20 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Cannot set up Direct Debit (3rd KYC Failure - manual payment)</td>
+                            <td class="nhsuk-table__cell">Cannot set up Direct Debit (Manual payment)</td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn/error-messages/cannot-set-up-dd-manual-payment">
-                                    Cannot set up Direct Debit (3rd KYC Failure - manual payment)
+                                    Cannot set up Direct Debit (Manual payment)
+                                </a>
+                            </td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Cannot set up Direct Debit (Manual payment) - Surcharge</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/error-messages/cannot-set-up-dd-manual-payment-surcharge">
+                                    Cannot set up Direct Debit (Manual payment) - Surcharge
                                 </a>
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
