--- a/app/views/v6-pcn/error-messages/cannot-set-up-dd-manual-payment-surcharge.html
+++ b/app/views/v6-pcn/error-messages/cannot-set-up-dd-manual-payment-surcharge.html
@@ -68,20 +68,21 @@
 
     <div class="nhsuk-inset-text">
         <span class="nhsuk-u-visually-hidden">Information: </span>
-        <p>It is important that you remember to make regular monthly payments. If you do not, you may have to pay a surcharge of up to £50.</p>
+        <p>It is important that you remember to make regular monthly payments. If you do not, we may start debt recovery proceedings.</p>
     </div>
-    
+
     <p>You can make a payment online using a debit or credit card. You can also make payments over the phone.</p>
     <p><strong>Telephone:</strong> 0300 330 9291</p>
     <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Find out about call charges and other ways to contact us on our website</a>.</p>
     <br>
-    <form action="/v6-pcn/error-messages/cannot-set-up-dd-manual-payment" method="post">
+
+    <form action="/v6-pcn/error-messages/cannot-set-up-dd-manual-payment-surcharge" method="post">
         <div class="nhsuk-form-group nhsuk-u-margin-bottom-0">
             <div class="nhsuk-checkboxes">
                 <div class="nhsuk-checkboxes__item">
                     <input class="nhsuk-checkboxes__input" id="termsCheckbox" name="terms" type="checkbox" value="understand">
                     <label class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-padding-top-0" for="termsCheckbox">
-                        I understand that if I fail to make regular monthly payments, an extra surcharge of up to £50 may be added to my charges.
+                        I understand if I fail to make regular monthly payments, the NHSBSA may start debt recovery proceedings.
                     </label>
                 </div>
             </div>
