Folder restructuring / fixes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -230,7 +230,7 @@
             </div>
         </div>
 
-        <div class="nhsuk-card">
+        <!-- <div class="nhsuk-card">
             <div class="nhsuk-card__content">
                 <h3 class="nhsuk-card__heading">
                     Journeys for Usability testing
@@ -246,7 +246,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
  {% endblock %}
