--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -12,7 +12,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-NHS.UK prototype kit
+TECS - Adhoc
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
@@ -449,7 +449,7 @@ NHS.UK prototype kit
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">More information needed</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/adhoc-screens/cannot-confirm-3rd">3rd
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/more-information-needed">3rd
                                     attempt
                                     failed</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
@@ -458,7 +458,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Cannot set up Direct Debit</td>
                             <td class="nhsuk-table__cell"><a
-                                    href="v6-pcn/error-messages/cannot-set-up-direct-debit">Direct debit
+                                    href="v6-pcn/kickout/cannot-set-up-direct-debit">Direct Debit
                                     error
                                     failed</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
@@ -467,7 +467,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Cannot set up Direct Debit (Manual payment)</td>
                             <td class="nhsuk-table__cell">
-                                <a href="v6-pcn/error-messages/cannot-set-up-dd-manual-payment">
+                                <a href="v6-pcn/kickout/cannot-set-up-dd-manual-payment">
                                     Cannot set up Direct Debit (Manual payment)
                                 </a>
                             </td>
@@ -477,7 +477,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Cannot set up Direct Debit (Manual payment) - Surcharge</td>
                             <td class="nhsuk-table__cell">
-                                <a href="v6-pcn/error-messages/cannot-set-up-dd-manual-payment-surcharge">
+                                <a href="v6-pcn/kickout/cannot-set-up-dd-manual-payment-surcharge">
                                     Cannot set up Direct Debit (Manual payment) - Surcharge
                                 </a>
                             </td>
@@ -486,7 +486,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Payment not authorised</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-not-authorised">Payment
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/kickout/payment-not-authorised">Payment
                                     error
                                     failed</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
@@ -495,7 +495,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Payment not collected</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-not-collected">Payment
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/kickout/payment-not-collected">Payment
                                     error
                                     failed</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
@@ -504,7 +504,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Payment cancelled</td>
                             <td class="nhsuk-table__cell"><a
-                                    href="v6-pcn/error-messages/payment-has-been-cancelled">Payment
+                                    href="v6-pcn/kickout/payment-has-been-cancelled">Payment
                                     cancelled
                                     failed</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
@@ -512,7 +512,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Payment timed out</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/payment-has-timed-out">Payment
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/kickout/payment-has-timed-out">Payment
                                     error time out
                                 </a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
@@ -616,7 +616,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">1st and 2nd attempt - cannot match details</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/we-need-proof">We cannot find your
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/we-need-proof">We cannot find your
                                     details</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
@@ -1059,7 +1059,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Date of birth field error</td>
                             <td class="nhsuk-table__cell"><a
-                                    href="v5-enquiry/error-messages/date-of-birth-error">DOB</a></td>
+                                    href="v6-pcn/error-messages/date-of-birth-error">DOB</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
@@ -1068,7 +1068,7 @@ NHS.UK prototype kit
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Text field error - NO BACK BUTTON</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/error-messages/text-field-error">Text
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/text-field-error">Text
                                     field</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
@@ -1079,7 +1079,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Text field error - WITH BACK BUTTON</td>
                             <td class="nhsuk-table__cell"><a
-                                    href="v5-enquiry/error-messages/text-field-error-back-button">Text field</a></td>
+                                    href="v6-pcn/error-messages/text-field-error-back-button">Text field</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
@@ -1087,7 +1087,7 @@ NHS.UK prototype kit
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Radio button error</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/error-messages/radio-error">Radio
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/radio-error">Radio
                                     button</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
@@ -1096,7 +1096,7 @@ NHS.UK prototype kit
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Checkbox error</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/error-messages/checkbox-error">Checkbox
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/checkbox-error">Checkbox
                                     input</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
@@ -1106,7 +1106,7 @@ NHS.UK prototype kit
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Fieldset error</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/error-messages/fieldset-error">Fieldset
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/fieldset-error">Fieldset
                                     error example -
                                     address input</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
@@ -1117,7 +1117,7 @@ NHS.UK prototype kit
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">500 error</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/adhoc-screens/500-error">There is a
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/500-error">There is a
                                     problem with the
                                     service</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
@@ -1127,7 +1127,7 @@ NHS.UK prototype kit
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">404 error</td>
-                            <td class="nhsuk-table__cell"><a href="v5-enquiry/adhoc-screens/404-error">Page not
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/error-messages/404-error">Page not
                                     found</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
