--- a/app/views/v6-pcn-decs/surcharge-pcn-hc3-experimental.html
+++ b/app/views/v6-pcn-decs/surcharge-pcn-hc3-experimental.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-Penalty Charge Notice details hc3
+Penalty Charge Notice details HC3
 {% endblock %}
 
 {% block outerContent %}
