--- a/app/views/v6-pcn/we-have-tried-to-find-your-updated-details.html
+++ b/app/views/v6-pcn/we-have-tried-to-find-your-updated-details.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-    We could not verify extra details
+    We could not verify your updated details
 {% endblock %}
 
 {% block outerContent %}
@@ -22,65 +22,53 @@
         <p>Once you have done this, you'll be brought back to this page.</p>
         <p>Select try again after you have updated your details.</p>
 
-
         <dl class="nhsuk-summary-list">
-
             <div class="nhsuk-summary-list__row">
-              <dt class="nhsuk-summary-list__key">
-                11 Street <br> ELY <br> Newcastle <br>NEX 421
-              </dt>
-              <dd class="nhsuk-summary-list__value">
-                </dd>
+				<dt class="nhsuk-summary-list__key">
+					{{ data['address-change-one'] | default('12 Old Oak Road') }} <br> 
+					{{ data['address-change-town'] | default('Throckley') | capitalize }} <br>
+					{{ data['address-change-postcode'] | default('NE67 9AD') | upper }}
+				</dt>
+
+				<dd class="nhsuk-summary-list__value">
+				</dd>
           
-              <dd class="nhsuk-summary-list__actions">
-          
-                <a href="/v6-pcn/what-is-your-address-dd">
-                  Change<span class="nhsuk-u-visually-hidden"> address</span>
-                </a>
-          
-              </dd>
-          
+				<dd class="nhsuk-summary-list__actions">
+					<a href="/v6-pcn/what-is-your-address-dd-change-2">
+						Change<span class="nhsuk-u-visually-hidden"> address</span>
+					</a>
+				</dd>
             </div>
           
             <div class="nhsuk-summary-list__row">
-              <dt class="nhsuk-summary-list__key">
-                Bank Account <br> 43215432 <br> Sort Code <br> 40-23-22 <br> Stephens
-              </dt>
-              <dd class="nhsuk-summary-list__value">
-                
-              </dd>
-          
-              <dd class="nhsuk-summary-list__actions">
-          
-                <a href="/v6-pcn/enter-bank-details">
-                  Change<span class="nhsuk-u-visually-hidden"> bank details</span>
-                </a>
-          
-              </dd>
-          
+				<dt class="nhsuk-summary-list__key">
+					Bank Account <br>
+					{{ data['account-number-change'] | default('1234567891') }} <br>
+					Sort Code <br>
+					{{ data['account-sort-one-change'] | default('12') }}-{{ data['account-sort-two-change'] | default('34') }}-{{ data['account-sort-three-change'] | default('56') }} <br>
+					{{ data['account-name-change'] | default('Michelle Doe') }}
+				</dt>
+				<dd class="nhsuk-summary-list__value">
+				</dd>
+			
+				<dd class="nhsuk-summary-list__actions">
+					<a href="/v6-pcn/enter-bank-details-change-2">
+						Change<span class="nhsuk-u-visually-hidden"> bank details</span>
+					</a>
+				</dd>
             </div>
-          
-            
-          
-              
-          
-            
-          
-            
-          
-          </dl>
+		</dl>
 
-    
-
-        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+        <a href="/v6-pcn/kickout/cannot-set-up-direct-debit" class="nhsuk-button" role="button">
             Try again
-        </button>
+        </a>
 
         <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
 
         <p>
             <a href="penalty-charge-notice-details-bsa">Cancel</a>
-       </div>
+		</p>
+	</div>
 </div>
 
 {% endblock %}
