cannot set up dd - v2 for testing built

--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment.html
@@ -21,7 +21,7 @@
         </a>
     </p>
 
-    <h2 class="nhsuk-heading-m">Pay in installments</h2>
+    <h2 class="nhsuk-heading-m">Pay in instalments</h2>
 
     <p>If you want to pay in instalments, you can make regular payments using a payment plan similar to Direct Debit.</p>
     <p>You'll need to make the first payment within 28 days (by 17 July 2024).</p>
@@ -88,7 +88,7 @@
         </div>
         <br>
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-            Pay in installments
+            Pay in instalments
         </button>
     </form>
 
