Redirect to payment choice for manual payment instalment options

--- a/app/views/v6-pcn/kickout/cannot-set-up-direct-debit-instalments.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-direct-debit-instalments.html
@@ -60,7 +60,7 @@ Paying in instalments
 			<p>It is important that you remember to make regular monthly payments. If you do not, you may have to pay a surcharge of up to £50.</p>
 		</div>
 
-		<form action="#" method="post">
+		<form action="/v6-pcn/payment-choice" method="post">
 			<div class="nhsuk-form-group nhsuk-u-margin-bottom-0">
 				<div class="nhsuk-checkboxes">
 					<div class="nhsuk-checkboxes__item">
