We could not verify your details screens - experimental versions

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -1366,6 +1366,27 @@ TECS - Adhoc
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">We could not verify your details
+                                <br><br>
+                                <p class="nhsuk-hint">
+                                    During user research (Nov 2024) users had issues realising they needed to clcik the 'Try again' button once updating their details in order to pass KYC, therefore we have updated the screens with the relevant instructions in question to use the inset component to draw attention to the instructions needed to progress.
+                                </p>
+                            
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/experimental/we-could-not-verify-your-details">We could not verify your details</a>
+                                <br><br>
+                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/experimental/we-have-tried-to-find-your-updated-details">We have tried to find your updated details</a>
+                           
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag">
+                                    BOTH
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Apple Pay (Full payment)
                                 <br><br>
                                 <p class="nhsuk-hint">An example of how the Gov pay screens would look if we are able to offer Apple Pay as a payment option.</p>
