--- a/app/views/v6-pcn/experimental/we-could-not-verify-your-details.html
+++ b/app/views/v6-pcn/experimental/we-could-not-verify-your-details.html
@@ -20,7 +20,11 @@
 
         <p>Change your details if any of them are incorrect by selecting change.</p>
         <p>Once you have done this, you'll be brought back to this page.</p>
-        <p>Select try again after you have updated your details.</p>
+
+        <div class="nhsuk-inset-text">
+            <span class="nhsuk-u-visually-hidden">Information: </span>
+            <p>Select try again after you have updated your details.</p>
+        </div>
 
         <dl class="nhsuk-summary-list">
             <div class="nhsuk-summary-list__row">
@@ -34,7 +38,7 @@
 				</dd>
           
 				<dd class="nhsuk-summary-list__actions">
-					<a href="/v6-pcn/what-is-your-address-dd-change">
+					<a href="#">
 						Change<span class="nhsuk-u-visually-hidden"> address</span>
 					</a>
 				</dd>
@@ -53,7 +57,7 @@
 			
 				<dd class="nhsuk-summary-list__actions">
 			
-				<a href="/v6-pcn/enter-bank-details-change">
+				<a href="#">
 					Change<span class="nhsuk-u-visually-hidden"> bank details</span>
 				</a>
 			
@@ -61,14 +65,14 @@
             </div>
 		</dl>
 
-        <a href="/v6-pcn/we-have-tried-to-find-your-updated-details" class="nhsuk-button" role="button">
+        <a href="#" class="nhsuk-button" role="button">
             Try again
         </a>
 
         <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
     
         <p>
-			<a href="penalty-charge-notice-details-bsa">Cancel</a>
+			<a href="#">Cancel</a>
 		</p>
 	</div>
 </div>
