--- a/app/views/v6-pcn/experimental/we-have-tried-to-find-your-updated-details.html
+++ b/app/views/v6-pcn/experimental/we-have-tried-to-find-your-updated-details.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-    We could not verify your details
+    We could not verify your updated details
 {% endblock %}
 
 {% block outerContent %}
@@ -16,11 +16,15 @@
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
         <span class="nhsuk-caption-l">Pay an NHS Penalty Charge Notice</span>
-        <h1 class="nhsuk-heading-xl">We could not verify your details</h1>    
+        <h1 class="nhsuk-heading-xl">We have tried to find your updated details but still could not find them</h1>    
 
         <p>Change your details if any of them are incorrect by selecting change.</p>
         <p>Once you have done this, you'll be brought back to this page.</p>
-        <p>Select try again after you have updated your details.</p>
+        
+        <div class="nhsuk-inset-text">
+            <span class="nhsuk-u-visually-hidden">Information: </span>
+            <p>Select try again after you have updated your details.</p>
+        </div>
 
         <dl class="nhsuk-summary-list">
             <div class="nhsuk-summary-list__row">
@@ -34,7 +38,7 @@
 				</dd>
           
 				<dd class="nhsuk-summary-list__actions">
-					<a href="/v6-pcn/what-is-your-address-dd-change">
+					<a href="#">
 						Change<span class="nhsuk-u-visually-hidden"> address</span>
 					</a>
 				</dd>
@@ -52,23 +56,21 @@
 				</dd>
 			
 				<dd class="nhsuk-summary-list__actions">
-			
-				<a href="/v6-pcn/enter-bank-details-change">
-					Change<span class="nhsuk-u-visually-hidden"> bank details</span>
-				</a>
-			
+					<a href="#">
+						Change<span class="nhsuk-u-visually-hidden"> bank details</span>
+					</a>
 				</dd>
             </div>
 		</dl>
 
-        <a href="/v6-pcn/we-have-tried-to-find-your-updated-details" class="nhsuk-button" role="button">
+        <a href="#" class="nhsuk-button" role="button">
             Try again
         </a>
 
-        <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
-    
+        <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
+
         <p>
-			<a href="penalty-charge-notice-details-bsa">Cancel</a>
+            <a href="#">Cancel</a>
 		</p>
 	</div>
 </div>
